compiling_error.txt
expression.cc: In function 'bool checkoperator(char)':
expression.cc:114:9: error: expected primary-expression before ')' token
   else () {
         ^
